made new changes on my client application

--- a/accounts/templates/auth_base.html
+++ b/accounts/templates/auth_base.html
@@ -24,7 +24,7 @@
         =======================================-->
 
         <!-- WEBPAGE TITLE -->
-        <title>Greeny - Login</title>
+        <title>Jumia - Login</title>
 
         <!--=====================================
                     CSS LINK PART START
