--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -392,7 +392,7 @@
                                             <a href="/products/{{object.slug}}"> {{object.name}} </a>
                                         </h6>
                                         <h6 class="product-price">
-                                            <span>${{object.price}}</span>
+                                            <span>ksh {{object.price}}</span>
                                         </h6>
                                         <button class="product-add" title="Add to Cart">
                                             <i class="fas fa-shopping-basket"></i>
