--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -135,7 +135,7 @@
                                         <a href="product-video.html">{{item}}</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <span>${{item.price}}</span>
+                                        <span>ksh {{item.price}}</span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -213,7 +213,7 @@
                                         <a href="">({{object.review_product.all|length}})</a>
                                     </div>
                                     <h6 class="feature-price">
-                                        <span>${{item.price}}</span>
+                                        <span>ksh {{item.price}}</span>
                                     </h6>
                                     <p class="feature-desc">{{item.subtitle}}</p>
                                     <button class="product-add" title="Add to Cart">
@@ -294,7 +294,7 @@
                                                 <a href="product-video.html">{{item}}</a>
                                             </h6>
                                             <h6 class="product-price">
-                                                <span>${{item.price}}</span>
+                                                <span>ksh {{item.price}}</span>
                                             </h6>
                                             <button class="product-add" title="Add to Cart">
                                                 <i class="fas fa-shopping-basket"></i>
@@ -398,8 +398,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span> 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -444,8 +444,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span>ksh 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -490,8 +490,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span>ksh 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -536,8 +536,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span>ksh 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -582,8 +582,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span>ksh 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -628,8 +628,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span>ksh 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -674,8 +674,8 @@
                                         <a href="product-video.html">fresh green chilis</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <del>$34</del>
-                                        <span>$28<small>/piece</small></span>
+                                        <del>ksh 34</del>
+                                        <span>ksh 28<small>/piece</small></span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
@@ -1848,7 +1848,7 @@
                                         <li class="fas fa-star"></li>
                                         <li class="fas fa-star"></li>
                                     </ul>
-                                    <img src="images/avatar/01.jpg" alt="testimonial">
+                                    <img src="{% static 'en/images/avatar/01.jpg'%}" alt="testimonial">
                                 </div>
                             {% endfor %}
                         </div>
