--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,4 +1,5 @@
 {% extends "auth_base.html" %}
+{% load static %}
 {% load django_bootstrap5 %}
 {% block body %}
 
@@ -8,7 +9,7 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-sm-10 col-md-12 col-lg-12 col-xl-10">
                         <div class="user-form-logo">
-                            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                            <a href="/"><img src="{% static 'en/images/yuva_logo.png'%}" alt="logo"></a>
                         </div>
                         <div class="user-form-card">
                             <div class="user-form-title">
