--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         =======================================-->
 
         <!-- WEBPAGE TITLE -->
-        <title>Index Home - Greeny</title>
+        <title> Jumia | Home </title>
 
         <!--=====================================
                     CSS LINK PART START
@@ -35,7 +35,7 @@
 
         <!-- FONTS -->
 
-            {% if LANGUAGE_CODE == 'en' %}
+        {% if LANGUAGE_CODE == 'en' %}
         <link rel="stylesheet" href="{% static 'en/fonts/flaticon/flaticon.css' %}">
         <link rel="stylesheet" href="{% static 'en/fonts/icofont/icofont.min.css' %}">
         <link rel="stylesheet" href="{% static 'en/fonts/fontawesome/fontawesome.min.css' %}">
@@ -76,7 +76,7 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-5">
                         <div class="header-top-welcome">
-                            <p>Welcome to Ecomart in Your Dream Online Store!</p>
+                            <p>Welcome to Jumia  in Your Dream Online Store!</p>
                         </div>
                     </div>
                     <div class="col-md-5 col-lg-3">
@@ -127,16 +127,16 @@
             <div class="container">
                 <div class="header-content">
                     <div class="header-media-group">
-                        <button class="header-user"><img src="images/user.png" alt="user"></button>
-                        <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+                        <button class="header-user"><img src="{% static 'ar/images/user.png'%}" alt="user"></button>
+                        <a href="index.html"><img src="{% static 'ar/images/logo.png'%}" alt="logo"></a>
                         <button class="header-src"><i class="fas fa-search"></i></button>
                     </div>
 
                     <a href="/" class="header-logo">
                         <img src="{{company_data.logo.url}}" alt="logo">
                     </a>
-                    <a href="login.html" class="header-widget" title="My Account">
-                        <img src="images/user.png" alt="user">
+                    <a href="{% url 'login'%}" class="header-widget" title="My Account">
+                        <img src="{% static 'en/images/user.png'%}" alt="user">
                         <span>join</span>
                     </a>
 
@@ -153,7 +153,7 @@
                         <button class="header-widget header-cart" title="Cartlist">
                             <i class="fas fa-shopping-basket"></i>
                             <sup>{{cart_detail_data|length}}</sup>
-                            <span>total price<small>${{cart_data.cart_total}}</small></span>
+                            <span>total price<small>Ksh {{cart_data.cart_total}}</small></span>
                         </button>
                     </div>
                 </div>
@@ -407,7 +407,7 @@
             <div class="cart-footer">
                 <a class="cart-checkout-btn" href="/orders/checkout">
                     <span class="checkout-label">Proceed to Checkout</span>
-                    <span class="checkout-price">${{cart_data.cart_total}}</span>
+                    <span class="checkout-price">ksh {{cart_data.cart_total}}</span>
                 </a>
             </div>
         </aside>
@@ -693,157 +693,135 @@
             
             {% endblock body %}
         <!--=====================================
-                    INTRO PART START
-        =======================================-->
-        <section class="intro-part">
-            <div class="container">
-                <div class="row intro-content">
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="intro-wrap">
-                            <div class="intro-icon">
-                                <i class="fas fa-truck"></i>
-                            </div>
-                            <div class="intro-content">
-                                <h5>free home delivery</h5>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit nobis.</p>
-                            </div>
-                        </div>
+                INTRO PART START
+=======================================-->
+<section class="intro-part">
+    <div class="container">
+        <div class="row intro-content">
+            <div class="col-sm-6 col-lg-3">
+                <div class="intro-wrap">
+                    <div class="intro-icon">
+                        <i class="fas fa-truck"></i>
                     </div>
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="intro-wrap">
-                            <div class="intro-icon">
-                                <i class="fas fa-sync-alt"></i>
-                            </div>
-                            <div class="intro-content">
-                                <h5>instant return policy</h5>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit nobis.</p>
-                            </div>
-                        </div>
+                    <div class="intro-content">
+                        <h5>Fast Delivery</h5>
+                        <p>Enjoy reliable and timely delivery to your doorstep.</p>
                     </div>
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="intro-wrap">
-                            <div class="intro-icon">
-                                <i class="fas fa-headset"></i>
-                            </div>
-                            <div class="intro-content">
-                                <h5>quick support system</h5>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit nobis.</p>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <div class="intro-wrap">
+                    <div class="intro-icon">
+                        <i class="fas fa-sync-alt"></i>
                     </div>
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="intro-wrap">
-                            <div class="intro-icon">
-                                <i class="fas fa-lock"></i>
-                            </div>
-                            <div class="intro-content">
-                                <h5>secure payment way</h5>
-                                <p>Lorem ipsum dolor sit amet adipisicing elit nobis.</p>
-                            </div>
+                    <div class="intro-content">
+                        <h5>Easy Returns</h5>
+                        <p>Hassle-free returns within 7 days for eligible items.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <div class="intro-wrap">
+                    <div class="intro-icon">
+                        <i class="fas fa-headset"></i>
+                    </div>
+                    <div class="intro-content">
+                        <h5>24/7 Support</h5>
+                        <p>We're here to assist you anytime, anywhere.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-lg-3">
+                <div class="intro-wrap">
+                    <div class="intro-icon">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <div class="intro-content">
+                        <h5>Secure Payments</h5>
+                        <p>Shop confidently with our secure payment systems.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--=====================================
+                INTRO PART END
+=======================================-->
+
+    <!--=====================================
+                    FOOTER PART START
+    =======================================-->
+    <footer class="footer-part">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-xl-3">
+                    <div class="footer-widget">
+                        <a class="footer-logo" href="#">
+                            <img src="{{company_data.logo.url}}" alt="Company Logo">
+                        </a>
+                        <p class="footer-desc">{{company_data.subtitle}}</p>
+                        <ul class="footer-social">
+                            <li><a href="{{company_data.facebook_link}}" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                            <li><a href="{{company_data.twitter_link}}" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="{{company_data.linkedin_link}}" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                            <li><a href="{{company_data.instagram_link}}" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xl-3">
+                    <div class="footer-widget contact">
+                        <h3 class="footer-title">Contact Us</h3>
+                        <ul class="footer-contact">
+                            <li>
+                                <i class="fas fa-envelope"></i>
+                                <span>{{company_data.email}}</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-phone"></i>
+                                <span>{{company_data.phones}}</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>{{company_data.address}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xl-3">
+                    <div class="footer-widget">
+                        <h3 class="footer-title">Quick Links</h3>
+                        <ul class="footer-links">
+                            <li><a href="#">My Account</a></li>
+                            <li><a href="#">Order History</a></li>
+                            <li><a href="#">Track Order</a></li>
+                            <li><a href="#">New Arrivals</a></li>
+                            <li><a href="#">Best Sellers</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-xl-3">
+                    <div class="footer-widget">
+                        <h3 class="footer-title">Download Our App</h3>
+                        <p class="footer-desc">Shop on the go with our mobile app. Download now for the best experience.</p>
+                        <div class="footer-app">
+                            <a href="#"><img src="{% static 'en/images/google-store.png' %}" alt="Google Play"></a>
+                            <a href="#"><img src="{% static 'en/images/app-store.png' %}" alt="App Store"></a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!--=====================================
-                    INTRO PART END
-        =======================================-->
-
-
-        <!--=====================================
-                     FOOTER PART START
-        =======================================-->
-        <footer class="footer-part">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-xl-3">
-                        <div class="footer-widget">
-                            <a class="footer-logo" href="#">
-                                <img src="{{company_data.logo.url}}" alt="logo">
-                            </a>
-                            <p class="footer-desc">{{company_data.subtitle}}</p>
-                            <ul class="footer-social">
-                                <li><a class="icofont-facebook" href="{{company_data.facebook_link}}"></a></li>
-                                <li><a class="icofont-twitter" href="{{company_data.twitter_link}}"></a></li>
-                                <li><a class="icofont-linkedin" href="{{company_data.linkedin_link}}"></a></li>
-                                <li><a class="icofont-instagram" href="{{company_data.instagram_link}}"></a></li>
-                                <li><a class="icofont-pinterest" href="{{company_data.pinterest_link}}"></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-xl-3">
-                        <div class="footer-widget contact">
-                            <h3 class="footer-title">contact us</h3>
-                            <ul class="footer-contact">
-                                <li>
-                                    <i class="icofont-ui-email"></i>
-                                    <p>
-                                        <span>{{company_data.email}}</span>
-                                    </p>
-                                </li>
-                                <li>
-                                    <i class="icofont-ui-touch-phone"></i>
-                                    <p>
-                                        <span>{{company_data.phones}}</span>
-                                    </p>
-                                </li>
-                                <li>
-                                    <i class="icofont-location-pin"></i>
-                                    <p>{{company_data.address}}</p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-xl-3">
-                        <div class="footer-widget">
-                            <h3 class="footer-title">quick Links</h3>
-                            <div class="footer-links">
-                                <ul>
-                                    <li><a href="#">My Account</a></li>
-                                    <li><a href="#">Order History</a></li>
-                                    <li><a href="#">Order Tracking</a></li>
-                                    <li><a href="#">Best Seller</a></li>
-                                    <li><a href="#">New Arrivals</a></li>
-                                </ul>
-                                <ul>
-                                    <li><a href="#">Location</a></li>
-                                    <li><a href="#">Affiliates</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                    <li><a href="#">Carrer</a></li>
-                                    <li><a href="#">Faq</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-xl-3">
-                        <div class="footer-widget">
-                            <h3 class="footer-title">Download App</h3>
-                            <p class="footer-desc">Lorem ipsum dolor sit amet tenetur dignissimos ipsum eligendi autem obcaecati minus ducimus totam reprehenderit exercitationem!</p>
-                            <div class="footer-app">
-                                <a href="#"><img src="images/google-store.png" alt="google"></a>
-                                <a href="#"><img src="images/app-store.png" alt="app"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="footer-bottom">
-                            <p class="footer-copytext">&copy;  All Copyrights Reserved by <a target="_blank" href="https://themeforest.net/user/mironcoder">Mironcoder</a></p>
-                            <div class="footer-card">
-                                <a href="#"><img src="images/payment/jpg/01.jpg" alt="payment"></a>
-                                <a href="#"><img src="images/payment/jpg/02.jpg" alt="payment"></a>
-                                <a href="#"><img src="images/payment/jpg/03.jpg" alt="payment"></a>
-                                <a href="#"><img src="images/payment/jpg/04.jpg" alt="payment"></a>
-                            </div>
-                        </div>
-                    </div>
+            <div class="row footer-bottom">
+                <div class="col-12 text-center">
+                    <p>&copy; 2025 All Rights Reserved. <a href="#">InnovationHub Softwares</a></p>
                 </div>
             </div>
-        </footer>
-        <!--=====================================
-                      FOOTER PART END
-        =======================================-->
+        </div>
+    </footer>
+    <!--=====================================
+                    FOOTER PART END
+    =======================================-->
+
         
 
         <!--=====================================
