--- a/product/templates/product/brand_detail.html
+++ b/product/templates/product/brand_detail.html
@@ -13,11 +13,11 @@
         =======================================-->
         <section class="single-banner" style="background: url(images/single-banner.jpg) no-repeat center;">
             <div class="container">
-                <h2>Brand Single</h2>
+                <h2>{{brand}}</h2>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="brand-list.html">brand-list</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">brand-single</li>
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">brand-list</a></li>
+                    <li class="breadcrumb-item active" aria-current="#">{{brand}}</li>
                 </ol>
             </div>
         </section>
