--- a/orders/templates/orders/checkout.html
+++ b/orders/templates/orders/checkout.html
@@ -12,7 +12,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="alert-info">
-                            <p>Returning customer? <a href="login.html">Click here to login</a></p>
+                            <p>Returning customer? <a href="{% url 'login'%}">Click here to login</a></p>
                         </div>
                     </div>
                     <div class="col-lg-12">
@@ -40,7 +40,7 @@
                                                     <td class="table-serial"><h6>{{ forloop.counter }}</h6></td>
                                                     <td class="table-image"><img src="{{item.product.image.url}}" alt="product"></td>
                                                     <td class="table-name"><h6>{{item.product}}</h6></td>
-                                                    <td class="table-price"><h6>${{item.price}}</h6></td>
+                                                    <td class="table-price"><h6>ksh {{item.price}}</h6></td>
                                                     <td class="table-brand"><h6>{{item.product.brand}}</h6></td>
                                                     <td class="table-quantity"><h6>{{item.quantity}}</h6></td>
                                                     <td class="table-action">
@@ -106,7 +106,7 @@
                                     <div class="col-md-6 col-lg-4 alert fade show">
                                         <div class="profile-card contact active">
                                             <h6>primary</h6>
-                                            <p>+8801838288389</p>
+                                            <p>+254112284093</p>
                                             <ul>
                                                 <li><button class="edit icofont-edit" title="Edit This" data-bs-toggle="modal" data-bs-target="#contact-edit"></button></li>
                                                 <li><button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button></li>
@@ -116,7 +116,7 @@
                                     <div class="col-md-6 col-lg-4 alert fade show">
                                         <div class="profile-card contact">
                                             <h6>secondary</h6>
-                                            <p>+8801941101915</p>
+                                            <p>+25457790687</p>
                                             <ul>
                                                 <li><button class="edit icofont-edit" title="Edit This" data-bs-toggle="modal" data-bs-target="#contact-edit"></button></li>
                                                 <li><button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button></li>
@@ -126,7 +126,7 @@
                                     <div class="col-md-6 col-lg-4 alert fade show">
                                         <div class="profile-card contact">
                                             <h6>secondary</h6>
-                                            <p>+8801747875727</p>
+                                            <p>+25457790687</p>
                                             <ul>
                                                 <li><button class="edit icofont-edit" title="Edit This" data-bs-toggle="modal" data-bs-target="#contact-edit"></button></li>
                                                 <li><button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button></li>
@@ -148,7 +148,7 @@
                                     <div class="col-md-6 col-lg-4 alert fade show">
                                         <div class="profile-card address active">
                                             <h6>Home</h6>
-                                            <p>jalkuri, fatullah, narayanganj-1420. word no-09, road no-17/A</p>
+                                            <p>Kasarani no-17/A</p>
                                             <ul class="user-action">
                                                 <li><button class="edit icofont-edit" title="Edit This" data-bs-toggle="modal" data-bs-target="#address-edit"></button></li>
                                                 <li><button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button></li>
@@ -158,7 +158,7 @@
                                     <div class="col-md-6 col-lg-4 alert fade show">
                                         <div class="profile-card address">
                                             <h6>Office</h6>
-                                            <p>east tejturi bazar, dhaka-1200. word no-04, road no-13/c, house no-4/b</p>
+                                            <p>Roysambu near TRM</p>
                                             <ul class="user-action">
                                                 <li><button class="edit icofont-edit" title="Edit This" data-bs-toggle="modal" data-bs-target="#address-edit"></button></li>
                                                 <li><button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button></li>
@@ -197,7 +197,7 @@
                                                 <span>****</span>
                                                 <sup>1876</sup>
                                             </p>
-                                            <h5>miron mahmud</h5>
+                                            <h5>Steve Ongera</h5>
                                             <button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button>
                                         </div>
                                     </div>
@@ -225,7 +225,7 @@
                                                 <span>****</span>
                                                 <sup>1876</sup>
                                             </p>
-                                            <h5>miron mahmud</h5>
+                                            <h5>Steve Ongera</h5>
                                             <button class="trash icofont-ui-delete" title="Remove This" data-bs-dismiss="alert"></button>
                                         </div>
                                     </div>
@@ -352,7 +352,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">number</label>
-                            <input class="form-control" type="text" value="+8801838288389">
+                            <input class="form-control" type="text" value="+254112284093">
                         </div>
                         <button class="form-btn" type="submit">save contact info</button>
                     </form>
