--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -189,11 +189,11 @@
                                     <button class="product-wish wish">
                                         <i class="fas fa-heart"></i>
                                     </button>
-                                    <a class="product-image" href="product-video.html">
+                                    <a class="product-image" href="{% url 'product:product-detail' item.slug %}">
                                         <img src="{{item.image.url}}" alt="product">
                                     </a>
                                     <div class="product-widget">
-                                        <a title="Product Compare" href="compare.html" class="fas fa-random"></a>
+                                        <a title="Product Compare" href="{% url 'product:product-detail' item.slug %}" class="fas fa-random"></a>
                                         <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
                                         <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
                                     </div>
@@ -211,7 +211,7 @@
                                         <a href="product-video.html">{{item.name}}</a>
                                     </h6>
                                     <h6 class="product-price">
-                                        <span>${{item.price}}</span>
+                                        <span>ksh {{item.price}}</span>
                                     </h6>
                                     <button class="product-add" title="Add to Cart">
                                         <i class="fas fa-shopping-basket"></i>
