--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -364,6 +364,7 @@
                            
                             <div class="col">
                                 <div class="product-card">
+                                    
                                     <div class="product-media">
                                         <div class="product-label">
                                             <label class="label-text new">{{object.flag}}</label>
@@ -465,8 +466,8 @@
                 <div class="row align-items-center">
                     <div class="col-md-5 col-lg-6 col-xl-7">
                         <div class="news-text">
-                            <h2>Get 20% Discount for Subscriber</h2>
-                            <p>Lorem ipsum dolor consectetur adipisicing accusantium</p>
+                            <h2>Get 20% Off on Your First Purchase ! </h2>
+                            <p>Subscribe to our newsletter for exclusive deals, new arrivals, and updates. Don't miss out</p>
                         </div>
                     </div>
                     <div class="col-md-7 col-lg-6 col-xl-5">
