--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -115,10 +115,10 @@
                                         <i class="fas fa-heart"></i>
                                     </button>
                                     <a class="product-image" >
-                                        <img src="{{item.image.url}}" style="width:202.4px ; height:202.4px" alt="product">
+                                        <img href="{% url 'product:product-detail' item.slug %}" src="{{item.image.url}}" style="width:202.4px ; height:202.4px" alt="product">
                                     </a>
                                     <div class="product-widget">
-                                        <a title="Product Compare" href="compare.html" class="fas fa-random"></a>
+                                        <a title="Product Compare" href="{% url 'product:product-detail' item.slug %}" class="fas fa-random"></a>
                                         <a title="Product Video" href="https://youtu.be/9xzcVxSBbG8" class="venobox fas fa-play" data-autoplay="true" data-vbtype="video"></a>
                                         <a title="Product View" href="#" class="fas fa-eye" data-bs-toggle="modal" data-bs-target="#product-view"></a>
                                     </div>
@@ -133,7 +133,7 @@
                                         <a href="">({{object.review_product.all|length}})</a>
                                     </div>
                                     <h6 class="product-name">
-                                        <a href="product-video.html">{{item}}</a>
+                                        <ahref="{% url 'product:product-detail' item.slug %}">{{item}}</ahref=>
                                     </h6>
                                     <h6 class="product-price">
                                         <span>ksh {{item.price}}</span>
@@ -192,7 +192,7 @@
                                     <button class="feature-wish wish">
                                         <i class="fas fa-heart"></i>
                                     </button>
-                                    <a class="feature-image" href="product-video.html">
+                                    <a class="feature-image" href="{% url 'product:product-detail' item.slug %}">
                                         <img src="{{item.image.url}}" style="width:220px ; height:220px" alt="product">
                                     </a>
                                     <div class="feature-widget">
@@ -273,7 +273,7 @@
                                             <button class="product-wish wish">
                                                 <i class="fas fa-heart"></i>
                                             </button>
-                                            <a class="product-image" href="product-video.html">
+                                            <a class="product-image" href="{% url 'product:product-detail' item.slug %}">
                                                 <img src="{{item.image.url}}" style="width:189.4px ; height:189.4px" alt="product">
                                             </a>
                                             <div class="product-widget">
