--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -44,7 +44,7 @@
                             <p>Don't have any account?<a href="{% url 'accounts:signup'%}">register here</a></p>
                         </div>
                         <div class="user-form-footer">
-                            <p>Jumia | &COPY; Copyright by <a href="#">InnovationHub Softwares</a></p>
+                            <p>Yuvaa | &COPY; Copyright by <a href="#">InnovationHub Softwares</a></p>
                         </div>
                     </div>
                 </div>
