--- a/accounts/templates/registration/change-password.html
+++ b/accounts/templates/registration/change-password.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -22,7 +23,7 @@
         =======================================-->
 
         <!-- WEBPAGE TITLE -->
-        <title>Greeny - Change Password</title>
+        <title>Yuvaa - Change Password</title>
 
         <!--=====================================
                     CSS LINK PART START
@@ -80,10 +81,10 @@
                             </form>
                         </div>
                         <div class="user-form-remind">
-                            <p>Go Back To<a href="login.html">login here</a></p>
+                            <p>Go Back To<a href="{% url 'login'%}">login here</a></p>
                         </div>
                         <div class="user-form-footer">
-                            <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+                            <p>Yuvaa | &COPY; Copyright by <a href="#">InnovationHub softwares</a></p>
                         </div>
                     </div>
                 </div>
