--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -32,7 +32,7 @@
                             <p>Go Back To<a href="{% url "login" %}">login here</a></p>
                         </div>
                         <div class="user-form-footer">
-                            <p>Greeny | &COPY; Copyright by <a href="#">{{company_data.name}}</a></p>
+                            <p>Yuvaa | &COPY; Copyright by <a href="#">{{company_data.name}}</a></p>
                         </div>
                     </div>
                 </div>
