--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -43,7 +43,7 @@
                             <p>Don't have any account?<a href="{% url 'login' %}">Login</a></p>
                         </div>
                         <div class="user-form-footer">
-                            <p>Greeny | &COPY; Copyright by <a href="#">Mironcoder</a></p>
+                            <p>Greeny | &COPY; Copyright by <a href="#">InnovatioHub Softwares</a></p>
                         </div>
                     </div>
                 </div>
